fix elements alignment

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   border-radius: 16px;
   width: 600px;
   min-height: 250px;
-  padding: 1rem;
+  padding: 1rem 2rem;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -39,8 +39,6 @@
   border-radius: 8px;
   border: none;
   outline: none;
-  margin-right: 2rem;
-  margin-left: 1rem;
   text-align: center;
   font-size: 30px;
   font-weight: bold;
@@ -62,11 +60,13 @@ input::-webkit-inner-spin-button {
   color: var(--white-color);
   font-size: 18px;
   padding: 14px 40px;
-  margin-right: 2rem;
   margin-bottom: 1rem;
   outline: none;
   transition: all 0.3s linear;
   cursor: pointer;
+}
+.btn-container button:nth-child(1) {
+  margin-right: 40px;
 }
 .btn-container button:hover {
   background: transparent;
@@ -83,5 +83,4 @@ input::-webkit-inner-spin-button {
 }
 .custom-icon {
   font-size: 40px;
-  margin-bottom: 10px;
 }
